addes used simpleimputer to handle missing values

--- a/Models/XGBClassifier.ipynb
+++ b/Models/XGBClassifier.ipynb
@@ -831,7 +831,13 @@
    "id": "aabd7f32-2c4e-43e6-93ae-dbbf2df80eae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "basicCleaningPipeline = Pipeline([\n",
+    "    ('NameRemove', FunctionTransformer(nameRemover)),\n",
+    "    ('HandleNaNs_Cat', FunctionTransformer(NaNHandler_Cat)),\n",
+    "    ('D_typeMatch', FunctionTransformer(TypeConverter)),\n",
+    "])"
+   ]
   }
  ],
  "metadata": {
